removed scrollbar, updated header in scss toolkit, fixed navtoggle color on navopen

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -141,7 +141,7 @@
 		& > .navigation-items-container {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-around;
+			justify-content: space-evenly;
 			width: 100%;
 			height: 100%;
 			z-index: 10;
