--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -6,6 +6,7 @@ body {
 	padding-top: $header-height;
 	padding-left: 2vw;
 	padding-right: 2vw;
+	overflow-y: scroll;
 }
 
 // Links
